# harmony-dl

./: package.json  pnpm-lock.yaml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  parse_xml.rs
src-tauri/src/parse_xml/: ffc.rs  mod.rs
src-tauri/src/process/: filter.rs  imgfmt.rs  individual.rs  max.rs  mod.rs
src/lib/: ffi_types.ts  range.ts
src/routes/: +page.svelte  WellPlate.svelte
src/routes/download/: +page.svelte  +page.ts
src/routes/output/: +page.svelte
src/routes/select/: +page.svelte  +page.ts
static/: global.css
