[package]
name = "harmony-dl"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harmony_dl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
xml = "0.8.20"
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["blocking"] }
rayon = "1.10.0"
image = { version = "0.25.5", default-features = false, features = ["tiff", "rayon"] }
ndarray = "0.16.1"
nshare = { version = "0.10.0", default-features = false, features = ["ndarray", "image"] }

